--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.10",
+    "@types/react": "^18.0.29",
+    "@types/react-dom": "^18.0.11",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "bootstrap": "^5.2.3",
@@ -20,6 +24,7 @@
     "react-scripts": "4.0.1",
     "recharts": "^2.4.3",
     "socket.io-client": "^3.0.4",
+    "typescript": "^5.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
