--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/compat-data": "7.19.4",
+    "@babel/core": "7.19.6",
+    "@babel/generator": "7.19.6",
+    "@babel/helper-compilation-targets": "7.19.3",
+    "@babel/helper-create-class-features-plugin": "7.19.0",
+    "@babel/helper-module-transforms": "7.19.6",
     "@reduxjs/toolkit": "^1.9.3",
+    "@safe-global/auth-kit": "^1.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -11,24 +18,29 @@
     "@types/node": "^18.15.10",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
-    "autoprefixer": "^9.8.6",
+    "@web3auth/base": "^4.6.0",
+    "@web3auth/modal": "^4.6.2",
+    "@web3auth/openlogin-adapter": "^4.6.0",
+    "autoprefixer": "^10.4.16",
     "axios": "^0.21.1",
     "bootstrap": "^5.2.3",
-    "postcss": "^7.0.36",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "postcss": "^8.4.31",
     "react": "^17.0.1",
     "react-bootstrap": "^2.7.2",
     "react-countup": "^6.4.2",
     "react-dom": "^17.0.1",
     "react-hot-toast": "^1.0.1",
     "react-redux": "^8.0.5",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.4.3",
     "socket.io-client": "^3.0.4",
-    "typescript": "^5.0.2",
+    "typescript": "^4.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -52,6 +64,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080",
-  "devDependencies": {}
+  "proxy": "http://localhost:8080"
 }
