--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -2,13 +2,17 @@
   "compilerOptions": {
     "target": "es2016",
     "noImplicitAny": false,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "module": "esnext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
@@ -17,5 +21,7 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
